imlemented 60fps game loop

--- a/Plat/Makefile
+++ b/Plat/Makefile
@@ -1,4 +1,4 @@
 CC=g++
 
 Plat:
-	$(CC) -std=c++11 Plat.cpp ../Graphics/Display.cpp ../Game/Game.cpp -lSDL2 -lGLEW -lGL -lSDL2_image
+	$(CC) -std=c++11 Plat.cpp ../Graphics/Display.cpp ../Game/Game.cpp ../Util/LTimer.cpp -lSDL2 -lGLEW -lGL -lSDL2_image
